[tool.poetry]
name = "car"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
pydantic = "^2.5.2"
alembic = "^1.12.1"
uvicorn = "^0.24.0"
asyncpg = "^0.29.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.22.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
